Add request to validate a membership
